Altered procfile. Tried cleaning up Dockerfile for smaller build.

--- a/Pipfile
+++ b/Pipfile
@@ -9,11 +9,9 @@ verify_ssl = true
 django = "*"
 djangorestframework = "*"
 psycopg2-binary = "*"
-django-sslserver = "*"
 djangorestframework-jwt = "*"
 django-cors-headers = "*"
 beautifulsoup4 = "*"
-selenium = "*"
 mpyq = "*"
 boto3 = "*"
 django-storages = "*"
@@ -26,3 +24,5 @@ s2protocol = "*"
 django-filter = "*"
 python-decouple = "*"
 requests = "*"
+dj-database-url = "*"
+django-heroku = "*"
