--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,11 @@ verify_ssl = true
 django = "*"
 djangorestframework = "*"
 psycopg2-binary = "*"
+django-sslserver = "*"
 djangorestframework-jwt = "*"
 django-cors-headers = "*"
 beautifulsoup4 = "*"
+selenium = "*"
 mpyq = "*"
 boto3 = "*"
 django-storages = "*"
