--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     env_file:
       - ./.env
     build: .
-    command: python /code/manage.py runserver 0.0.0.0:8000
+    command: python /code/manage.py runserver 0.0.0.0:8000 --nostatic
     volumes:
       - .:/code
       #- c:/users/dfitz/projects/zclreplay/zclreplay:/usr/local/lib/python3.6/site-packages/zclreplay
